--- a/src/html/test-H5ComponentBar_v.html
+++ b/src/html/test-H5ComponentBar_v.html
@@ -6,29 +6,32 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>测试页面</title>
     <link rel="stylesheet" href="./css/H5ComponentBase.css">
-    <!--柱图-->
-    <link rel="stylesheet" href="./css/H5ComponentBar.css">
+    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery-ui.min.js"></script>
+    <script src="./js/jquery.fullPage.js"></script>
+    <script src="./js/H5ComponentBase.js"></script>
+    <!--引入水平柱图-->
     <script src="./js/H5ComponentBar.js"></script>
+    <!--垂直柱图-->
+    <link rel="stylesheet" href="./css/H5ComponentBar_v.css">
+    <script src="./js/H5ComponentBar_v.js"></script>
     <style>
         body{
             padding: 0;
             margin: 0;
         }
-        /*.iphone{*/
-        /*width: 340px;*/
-        /*height:540px;*/
-        /*background: #fff;*/
-        /*position: absolute;*/
-        /*top:50%;*/
-        /*left:50%;*/
-        /*margin: -270px 0 0 -170px;*/
-        /*}*/
+        .iphone{
+        width: 340px;
+        height:540px;
+        background: #fff;
+        position: absolute;
+        top:50%;
+        left:50%;
+        margin: -270px 0 0 -170px;
+        }
 
     </style>
-    <script src="./js/jquery.js"></script>
-    <script src="./js/jquery-ui.min.js"></script>
-    <script src="./js/jquery.fullPage.js"></script>
-    <script src="./js/H5ComponentBase.js"></script>
+
 
 </head>
 <body>
@@ -37,7 +40,9 @@
 </div>
 <script>
     var cfg = {
-        type: 'bar',
+        type: 'bar_v',
+//        text: 'text',
+//        bg: './imgs/p1_people.png',
         data: [
             ['JavaScript', .4, '#ff7676'],
             ['HTML', .2],
@@ -49,14 +54,14 @@
         width: 530,
         height: 600,
         css: {
-            top: 100,
+            top: 200,
             opacity: 0
         },
         animateIn: {opacity: 1, top: 200},
         animateOut: {opacity: 0,top: 100},
         center: true
     };
-    var h5 = new H5ComponentBar('myBar',cfg);
+    var h5 = new H5ComponentBar_v('myBarComponent',cfg);
     $('.iphone').append(h5);
 
     var leave  = true;
