--- a/src/html/test-H5ComponentRing.html
+++ b/src/html/test-H5ComponentRing.html
@@ -6,23 +6,27 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>测试页面</title>
     <link rel="stylesheet" href="./css/H5ComponentBase.css">
-    <!--柱图-->
-    <link rel="stylesheet" href="./css/H5ComponentBar.css">
-    <script src="./js/H5ComponentBar.js"></script>
+    <!--饼图-->
+    <link rel="stylesheet" href="./css/H5ComponentPie.css">
+    <script src="./js/H5ComponentPie.js"></script>
+
+    <!--环图-->
+    <link rel="stylesheet" href="./css/H5ComponentRing.css">
+    <script src="./js/H5ComponentRing.js"></script>
     <style>
         body{
             padding: 0;
             margin: 0;
         }
-        /*.iphone{*/
-        /*width: 340px;*/
-        /*height:540px;*/
-        /*background: #fff;*/
-        /*position: absolute;*/
-        /*top:50%;*/
-        /*left:50%;*/
-        /*margin: -270px 0 0 -170px;*/
-        /*}*/
+        .iphone{
+            width: 340px;
+            height:540px;
+            background: #fff;
+            position: absolute;
+            top:50%;
+            left:50%;
+            margin: -270px 0 0 -170px;
+        }
 
     </style>
     <script src="./js/jquery.js"></script>
@@ -37,26 +41,28 @@
 </div>
 <script>
     var cfg = {
-        type: 'bar',
+        type: 'ring',
+//        text: 'text',
+//        bg: './imgs/p1_people.png',
         data: [
-            ['JavaScript', .4, '#ff7676'],
-            ['HTML', .2],
-            ['CSS', .1],
-            ['JQuery', .3],
-            ['Bootstrap', .05]
-
+            ['JavaScript', .3, '#ff7676']
+//            ,
+//            ['HTML', .25],
+//            ['CSS', .2],
+//            ['JQuery', .2],
+//            ['Bootstrap', .05]
         ],
-        width: 530,
-        height: 600,
+        width: 400,
+        height: 400,
         css: {
-            top: 100,
+            top: 200,
             opacity: 0
         },
         animateIn: {opacity: 1, top: 200},
         animateOut: {opacity: 0,top: 100},
         center: true
     };
-    var h5 = new H5ComponentBar('myBar',cfg);
+    var h5 = new H5ComponentRing('myRing',cfg);
     $('.iphone').append(h5);
 
     var leave  = true;
